[package]
name = "overchain-lib"
version = "0.1.0"
authors = ["Christian Nyumbayire <chritchens@gmail.com>"]

[dependencies]
# numerical
num = "0.1.37"
rand = "0.3.15"

# data structures
arrayvec = "0.3.21"

# crypto
rust-crypto = "0.2.36"
secp256k1 = "0.6.0"

# bitcoin
bitcoin = "0.9.1"

# serialization
byteorder = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0" # json
rmp = "0.8.6"
rmpv = "0.4.0"
rmp-serde = "0.13.0" # messagepack
